# unity-scope-youtube

./: .bzrignore  CMakeLists.txt  YoutubeDownloader.cpp  YoutubeDownloader.h  accountstest.cpp  build.sh  click-build.sh  click-schroot.sh  click.sh  util.h  ytapp.cpp  yttest.cpp
click/: CMakeLists.txt  apparmor.json  manifest.json.in  youtube.application  youtube.application.in  youtube.desktop  youtube.service  youtube.service.in
data/: CMakeLists.txt  com.ubuntu.scopes.youtube.ini.in  com.ubuntu.scopes.youtube.map  unity-scope-youtube.ini.in
data/accounts/providers/: youtube.provider
data/accounts/qml-plugins/youtube/: Main.qml
data/accounts/services/: youtube.service
debian/: changelog  control  copyright  rules
include/youtube/api/: channel-section.h  channel.h  client.h  comment.h  config.h  guide-category.h  playlist-item.h  playlist.h  resource.h  search-list-response.h  simple-oauth.h  subscription-item.h  subscription.h  user.h  video-category.h  video.h
include/youtube/scope/: activation.h  localisation.h  preview.h  query.h  scope.h
original/: CMakeLists.txt  YoutubeDownloader.h  parsetest.cpp  util.cpp
po/: CMakeLists.txt  POTFILES.in  ar.po  br.po  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fi.po  fr.gmo  fr.po  fur.gmo  fur.po  gd.po  gl.po  he.po  hu.gmo  hu.po  it.gmo  it.po  nb.po  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  ru.gmo  ru.po  sl.gmo  sl.po  uk.po  unity-scope-youtube.pot
src/: CMakeLists.txt
src/youtube/api/: channel-section.cpp  channel.cpp  client.cpp  comment.cpp  guide-category.cpp  playlist-item.cpp  playlist.cpp  search-list-response.cpp  simple-oauth.cpp  subscription-item.cpp  subscription.cpp  user.cpp  video-category.cpp  video.cpp
src/youtube/scope/: activation.cpp  preview.cpp  query.cpp  scope.cpp
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  youtube-functional-tests.cpp
tests/server/: guide-categories.json  search.json  server.py
tests/server/channelSections/: UC-9-kyTW8ZkZNDHQJ6FgpwQ.json  UC20vb-R_px4CguHzzBPhoyQ.json  UC3yA8nDwraeOfnYfBWun83g.json  UCEgdi0XIXXZ-qJOFPf4JSKw.json  UCF0pVplsI8R5kcAqgtoRqoA.json  UCOpNcN46UbXVtpKMrmU4Abg.json  UC_TVqp_SyG6j5hG-xVRy95A.json  UCdI8evszfZvyAl2UVCypkTA.json  UCpDJl2EmP7Oh90Vylx0dZtA.json  UCrDkAvwZum-UTjHmzDI2iIw.json
tests/server/channels/: GCQmVzdCBvZiBZb3VUdWJl.json  GCTXVzaWM.json
tests/server/playlistItems/: PL8fVUTBmJhHJmpP7sLb9JfLtdwCmYX9xC.json  PL9Z0stL3aRykWNoVQW96JFIkelka_93Sc.json  PL9tY0BWXOZFvP6d0dzFMvx6zcAkwWCszb.json  PLEE58C6029A8A6ADE.json  PLFgquLnL59alCl_2TQvOiD5Vgm1hCaGSI.json  PLN_VEYjh8gCByLq9iBB_yP4Qyhh95DMyH.json  PLR4XuJ-iybKv7PCHYgblXmMA73lOH1_Uw.json  PLiCvVJzBupKnKoAJR3T8NxXwA5mPeBD8W.json  PLrEnWoR732-BHrPp_Pm8_VleD68f9s14-.json
tests/server/playlists/: UC20vb-R_px4CguHzzBPhoyQ.json  UC_TVqp_SyG6j5hG-xVRy95A.json  UCdI8evszfZvyAl2UVCypkTA.json  UCpDJl2EmP7Oh90Vylx0dZtA.json  UCrDkAvwZum-UTjHmzDI2iIw.json
tests/server/search/channelId/: UC20vb-R_px4CguHzzBPhoyQ.json  UC_TVqp_SyG6j5hG-xVRy95A.json  UCdI8evszfZvyAl2UVCypkTA.json  UCpDJl2EmP7Oh90Vylx0dZtA.json  UCrDkAvwZum-UTjHmzDI2iIw.json
tests/server/search/q/: Metallica10.json
tests/server/videos/videoCategoryId/: 10.json
tests/unit/: CMakeLists.txt
tests/unit/youtube/scope/: test-youtube-scope.cpp
